# mongodb-in-python

./: .gitignore  README.md  pyproject.toml
config/: database.py
routes/: route.py
